--- a/Backend/atse_project/pom.xml
+++ b/Backend/atse_project/pom.xml
@@ -53,6 +53,12 @@
 		  <version>4.5.2</version>
 		</dependency>
 		
+		<dependency>
+        	<groupId>com.google.code.gson</groupId>
+        	<artifactId>gson</artifactId>
+        	<version>2.1</version>
+		</dependency>
+		
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
