Update Android, notifications

--- a/Android/CourseApp/app/src/main/AndroidManifest.xml
+++ b/Android/CourseApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".OverviewActivity" >
         </activity>
+
+        <service android:name=".BroadcastService" />
     </application>
 
 </manifest>
