--- a/Android/CourseApp/app/build.gradle
+++ b/Android/CourseApp/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.+'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
